Details
-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.5.0 Beta3
-
None
-
-
1faea46fb (dev), ca09a0c41 (6.5)
Description
For each QWasmWindow we provide "Enable screen reader" accessibility button. This button should not be visible, and is z-ordered below content of window in order to stay hidden.
Sometimes the content of the window which is drawn on canvas contains transparent elements and reveals the button beneath it.
Hide the button visually but make it still accessible to the screen readers.
Attachments
Issue Links
- is duplicated by
-
QTBUG-115377 WASM: QWidget & QWindow can't be fully transparent like desktop platforms
-
- Closed
-
For Gerrit Dashboard: QTBUG-111896 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
465233,5 | Wasm: Hide "Enable screen reader" button in QWasmWindow | dev | qt/qtbase | Status: MERGED | +2 | 0 |
490368,3 | Wasm: Hide "Enable screen reader" button in QWasmWindow | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |